--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,10 @@
 @theme inline {
     --color-background: var(--background);
     --color-foreground: var(--foreground);
-    --font-sans: var(--font-geist-sans);
-    --font-mono: var(--font-geist-mono);
+    --font-primary: var(--font-inter);
+    --font-jua: var(--font-jua);
+    --font-anta: var(--font-anta);
+    --font-platypi: var(--font-platypi) --font-castoro: var(--font-castoro);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +24,21 @@
 body {
     background: var(--background);
     color: var(--foreground);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font-primary);
+}
+
+.font-jua {
+    font-family: var(--font-jua);
+}
+
+.font-anta {
+    font-family: var(--font-anta);
+}
+
+.font-platypi {
+    font-family: var(--font-platypi);
+}
+
+.font-castoro {
+    font-family: var(--font-castoro);
 }
