--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@
     --font-jua: var(--font-jua);
     --font-anta: var(--font-anta);
     --font-platypi: var(--font-platypi) --font-castoro: var(--font-castoro);
+    --breakpoint-xs: 26.5rem;
     --breakpoint-3xl: 120rem;
 }
 
@@ -42,4 +43,14 @@ body {
 
 .font-castoro {
     font-family: var(--font-castoro);
+}
+
+.hide-scrollbar {
+    -ms-overflow-style: none; /* For IE and Edge */
+    scrollbar-width: none; /* For Firefox */
+}
+
+/* For Chrome, Safari, and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
 }
